--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     # マスクテスト
     - name: test
       run: |
+        echo "Hello!""${{ github.event.inputs.name }}"
+        echo "::add-mask::${{ github.event.inputs.name }}"
         # cd /home/ubuntu/work/sekiguchi
-        echo "Hello!""::add-mask::${{ github.event.inputs.name }}"
-        echo "::add-mask::secret_value"
         echo "Hello2!""${{ github.event.inputs.name }}"
