--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,4 @@ jobs:
         # curl ${{ github.event.inputs.name }}
         # シークレット情報を参照
         # curl ${{secrets.SECRET_URL}}
-        echo -e "::notice::aaaaaa\n""bbbbb\n""ccccc"
+        echo -e "::notice::aaaaaa\nbbbbb\nccccc"
