--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,6 @@ jobs:
         # curl ${{ github.event.inputs.name }}
         # シークレット情報を参照
         # curl ${{secrets.SECRET_URL}}
-        echo -e "::notice::aaaaaa\nbbbbb\nccccc"
         
     - uses: actions/github-script@v6
       with:
@@ -30,4 +29,4 @@ jobs:
           const name = 'greeting'
           const value = 'Hello\nWorld'
           core.setOutput(name, value)
-          echo -e "::notice::${name}"
+          #echo -e "::notice::${name}"
