--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,6 @@ jobs:
         # curl ${{ github.event.inputs.name }}
         # シークレット情報を参照
         # curl ${{secrets.SECRET_URL}}
-        echo "::notice file=app.js,line=1,col=5,endColumn=7::Missing semicolon"
+        echo -e "::notice file=app.js,line=1,col=5,endColumn=7::Missing semicolon\naaaaa"
         
+        echo -e "abcde\nfghij"
