--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,9 +24,11 @@ jobs:
         # curl ${{secrets.SECRET_URL}}
         
         # サマリ出力
-        echo "INPUT INFO:" >> $GITHUB_STEP_SUMMARY
-        echo "  PROJECT:XXXXX" >> $GITHUB_STEP_SUMMARY
-        echo "  COLLECTION:XXXXX" >> $GITHUB_STEP_SUMMARY
-        echo "  REPOSITORY(BRANCH OR TAG):XXXXX" >> $GITHUB_STEP_SUMMARY
-        echo "SEARCH RESULT:"  >> $GITHUB_STEP_SUMMARY
-        echo "  JIRA TICKET NO DATA" >> $GITHUB_STEP_SUMMARY
+        #echo "INPUT INFO:" >> $GITHUB_STEP_SUMMARY
+        #echo "  PROJECT:XXXXX" >> $GITHUB_STEP_SUMMARY
+        #echo "  COLLECTION:XXXXX" >> $GITHUB_STEP_SUMMARY
+        #echo "  REPOSITORY(BRANCH OR TAG):XXXXX" >> $GITHUB_STEP_SUMMARY
+        #echo "SEARCH RESULT:"  >> $GITHUB_STEP_SUMMARY
+        #echo "  JIRA TICKET NO DATA" >> $GITHUB_STEP_SUMMARY
+
+        echo -e "INPUT INFO:\n  PROJECT:XXXXX\n  COLLECTION:XXXXX\n  REPOSITORY(BRANCH OR TAG):XXXXX\nSEARCH RESULT:\n  JIRA TICKET NO DATA" >> $GITHUB_STEP_SUMMARY
