--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,4 @@ jobs:
         #echo "SEARCH RESULT:"  >> $GITHUB_STEP_SUMMARY
         #echo "  JIRA TICKET NO DATA" >> $GITHUB_STEP_SUMMARY
 
-        echo -e "INPUT INFO:\n  PROJECT:XXXXX\n  COLLECTION:XXXXX\n  REPOSITORY(BRANCH OR TAG):XXXXX\nSEARCH RESULT:\n  JIRA TICKET NO DATA" >> $GITHUB_STEP_SUMMARY
+        echo -e "*INPUT INFO:\n*  PROJECT:XXXXX\n*  COLLECTION:XXXXX\n*  REPOSITORY(BRANCH OR TAG):XXXXX\n*SEARCH RESULT:\n*  JIRA TICKET NO DATA" >> $GITHUB_STEP_SUMMARY
