--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,21 +26,21 @@ jobs:
         # サマリ出力
         echo -e "# INPUT INFO:" >> $GITHUB_STEP_SUMMARY
         echo -e "| Items  | Info |" >> $GITHUB_STEP_SUMMARY
-        echo -e "| - | - |" >> $GITHUB_STEP_SUMMARY
+        echo -e "| :- | :- |" >> $GITHUB_STEP_SUMMARY
         echo -e "| PROJECT | XXXXX |" >> $GITHUB_STEP_SUMMARY
         echo -e "| COLLECTION | XXXXX |" >> $GITHUB_STEP_SUMMARY
         echo -e "| REPOSITORY(BRANCH OR TAG) | XXXXX |" >> $GITHUB_STEP_SUMMARY
 
         echo -e "# JIRA TICKET LIST:" >> $GITHUB_STEP_SUMMARY
         echo -e "| Tickets  | Log Info |" >> $GITHUB_STEP_SUMMARY
-        echo -e "| - | - |" >> $GITHUB_STEP_SUMMARY
+        echo -e "| :- | :- |" >> $GITHUB_STEP_SUMMARY
         echo -e "| XXXXX-XXX | Exist |" >> $GITHUB_STEP_SUMMARY
         echo -e "| XXXXX-XXX | Exist |" >> $GITHUB_STEP_SUMMARY
         echo -e "| XXXXX-XXX | Not Exist |" >> $GITHUB_STEP_SUMMARY
 
         echo -e "# SEARCH RESULT:" >> $GITHUB_STEP_SUMMARY
         echo -e "| Items  | Log Info |" >> $GITHUB_STEP_SUMMARY
-        echo -e "| - | - |" >> $GITHUB_STEP_SUMMARY
+        echo -e "| :- | :- |" >> $GITHUB_STEP_SUMMARY
         echo -e "| TICKET COUNT | XXX |" >> $GITHUB_STEP_SUMMARY
         echo -e "| LOG EXIST TICKET COUNT | XXX |" >> $GITHUB_STEP_SUMMARY
         echo -e "| LOG NOT EXIST TICKET COUNT | XXX |" >> $GITHUB_STEP_SUMMARY
